# LEVEL3-MLOps

./: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
bike-rental/: README.md  pyproject.toml
bike-rental/config/: base.yaml  local.yaml  prod.yaml
bike-rental/handout/: week-3.md
bike-rental/notebooks/: eda_and_preprocessing.ipynb
bike-rental/src/bike_rental/: config.py
bike-rental/src/bike_rental/defs/: schemas.py
bike-rental/src/bike_rental/defs/asset_checks/: __init__.py  contracts.py
bike-rental/src/bike_rental/defs/assets/data/holidays/: __init__.py
bike-rental/src/bike_rental/defs/assets/data/rentals/: __init__.py  intermediate.py  primary.py
bike-rental/src/bike_rental/defs/assets/data/weather/: primary.py
bike-rental/src/bike_rental/defs/assets/ml/: __init__.py  feature.py
bike-rental/src/bike_rental/defs/io_managers/: __init__.py  csv_io.py
bike-rental/src/bike_rental/defs/resources/: bike_data.py
data/raw/bike_rental/: weather.csv
docs/week-2/: handout.md
notebooks/week-2/: data_exploration.ipynb  eda_and_preprocessing.ipynb
pipelines/bike_rental/: pyproject.toml
pipelines/bike_rental/config/: base.yaml  local.yaml
pipelines/bike_rental/src/bike_rental/: __init__.py  config.py  definitions.py
pipelines/bike_rental/src/bike_rental/defs/: __init__.py  io_utils.py  schemas.py
pipelines/bike_rental/src/bike_rental/defs/asset_checks/: contracts.py
pipelines/bike_rental/src/bike_rental/defs/assets/: __init__.py  final_asset.py  holidays.py  raw_data.py  rentals.py  weather.py
pipelines/bike_rental/src/bike_rental/defs/assets/data/: __init__.py  raw.py
pipelines/bike_rental/src/bike_rental/defs/assets/ml/: __init__.py  feature.py
pipelines/bike_rental/src/bike_rental/defs/io_managers/: csv_io.py
pipelines/bike_rental/src/bike_rental/defs/resources/: __init__.py  bike_data.py
src/mlops_track/data/: paths.py
titanic/: README.md  pyproject.toml
titanic/data/: titanic.csv
titanic/handout/: README.md
titanic/notebooks/: 02_scikit_learn_training.ipynb  03_logreg_implementation.ipynb
titanic/src/: logreg.py
titanic/templates/: LICENSE  titanic_survival_part_2_template.ipynb
week-1/: README.md
week-1/notebooks/: 01_titanic_eda.ipynb  02_scikit_learn_training.ipynb  03_logreg_implementation.ipynb  part1_sklearn.ipynb  titanic_survival_part_2_template.ipynb
week-1/src/: logreg.py
week-1/tests/: test_logreg.py
week-2/data/: holidays.csv
week-2/templates/bike_rental/: pyproject.toml
week-2/templates/bike_rental/src/bike_rental/: definitions.py
week-2/templates/bike_rental/src/bike_rental/defs/assets/: hello.py
(+8 files in other folders)
