[project]
name = "Name_here"
version = "0.1.0"
description = "Bla-Bla"
requires-python = ">=3.10"

dependencies = [
	"numpy>=1.26",
	"pandas>=2.0",
	"scikit-learn>=1.3",
	"matplotlib>=3.7",
	"seaborn>=0.12",
	"jupyter>=1.0",
	"flake8>=7.0",
	"mypy>=1.0",
	"pytest>=8.0",
]

[tool.uv]
package = false

