[project]
name = "mlops-track"
version = "0.1.0"
description = "ML Engineering Track — end-to-end ML systems and MLOps workflows"
requires-python = ">=3.10"

dependencies = [
	"numpy>=1.26",
	"pandas>=2.0",
	"scikit-learn>=1.3",
	"matplotlib>=3.7",
	"seaborn>=0.12",
	"jupyter>=1.0",
	"ruff>=0.5",
	"pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlops_track"]

