[project]
name = "bike-rental"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.12.21",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pandera>=0.31.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = ["dagster-webserver", "dagster-dg-cli", "ruff"]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E501"]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "bike_rental"
registry_modules = ["bike_rental.components.*"]
