[project]
name = "titanic"
version = "0.1.0"
description = "Week 1 — Titanic classification (intro exercise)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "jupyter>=1.0",
]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.uv]
package = false
