[project]
name = "bike-rental"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = ["dagster==1.12.21"]

[dependency-groups]
dev = ["dagster-webserver", "dagster-dg-cli"]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 80
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "D"]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "bike_rental"
registry_modules = ["bike_rental.components.*"]
